# cava-bg

./: .SRCINFO  .gitignore  AUR-README.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  INSTALL.md  LICENSE  PKGBUILD  README.md  build-release.sh  build.rs  config.toml  flake.nix  install.sh  test_config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci_cd.yml  release.yml
examples/: catppuccin.toml  minimal.toml  rainbow.toml  wallpaper_gradient.md
multimedia/: Example Simple.webm
shaders/: fragment.glsl
src/: actual_window_solution.rs  app_config.rs  bar_geometry.rs  cava_backend.rs  cava_manager.rs  cli.rs  cli_help.rs  config.rs  config_gui.rs  layer_finder.rs  layer_system.rs  main.rs  main_integrated.rs  parallax_shader.wgsl  parallax_system.rs  perf_monitor.rs  real_window_final.rs  renderer.rs  renderer_actual.rs  renderer_wayland.NOTE  renderer_wayland.rs  sdl2_renderer.rs  shader.rs  shader.wgsl  simple_overlay.rs  video_decoder.rs  wallpaper.rs  wallpaper_cava_final.rs  wallpaper_cava_real.rs  wallpaper_cava_simple.rs  wallpaper_detector.rs  wayland.rs  wayland_renderer.rs  wayland_working.rs  waypaper_compatible.rs  wgpu_renderer.rs  xray_animator.rs
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
