[package]
name = "cava-bg"
version = "0.2.0"
edition = "2021"
authors = ["leriart"]
description = "A native Wayland implementation of wallpaper-cava with auto-colors"
license = "MIT"
repository = "https://github.com/leriart/cava-bg"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
walkdir = "2.5"
image = "0.24"
once_cell = "1.20"
clap = { version = "4.5", features = ["derive"] }
gl = "0.14"
khronos-egl = { version = "6.0", features = ["static"] }
wayland-client = "0.31"
wayland-egl = "0.32"
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git", rev = "99ddfec" }
calloop = "0.14"
calloop-wayland-source = "0.4"
notify = "6.1"
gazo = "0.0.3"
rgb = "0.8"