[package]
name = "cava-bg"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
walkdir = "2.5"
image = "0.24"
once_cell = "1.20"
color-thief = "0.2"
bytemuck = "1.14"
bytemuck_derive = "1.5"
wgpu = "0.19"
pollster = "0.3"
wayland-client = "0.31"
wayland-egl = "0.32"
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git", rev = "99ddfec" }
calloop = "0.14"
calloop-wayland-source = "0.4"
raw-window-handle = "0.6"