[package]
name = "cava-bg"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Audio visualizer for Wayland"
authors = ["Leriart"]
repository = "https://github.com/leriart/cava-bg"
homepage = "https://github.com/leriart/cava-bg"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
walkdir = "2.5"
image = "0.24"
once_cell = "1.20"
color-thief = "0.2"
bytemuck = "1.14"
bytemuck_derive = "1.5"
wgpu = "0.19"
pollster = "0.3"
wayland-client = "0.31"
wayland-egl = "0.32"
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git", rev = "99ddfec" }
calloop = "0.14"
calloop-wayland-source = "0.4"
raw-window-handle = "0.6"
libc = "0.2"
serde_json = "1.0"
urlencoding = "2.1"


[package.metadata.deb]
maintainer = "Leriart"
copyright = "2026, Leriart"
license-file = ["LICENSE", "0"]
depends = "libc6, wayland, cava"
extended-description = """\
cava-bg is an audio visualizer for Wayland that is drawn as a background layer. 
Supports multiple desktop environments and window managers.
"""
section = "sound"
priority = "optional"
assets = [
    ["target/release/cava-bg", "/usr/bin/cava-bg", "755"],
    ["README.md", "/usr/share/doc/cava-bg/README.md", "644"],
]


[package.metadata.generate-rpm]
license = "MIT"
release = "1"
packager = "Leriart"
summary = "Audio visualizer for Wayland"
description = "cava-bg draws audio bars over the wallpaper in Wayland environments."


[package.metadata.generate-rpm.requires]
cava = "*"
wayland = "*"

[[package.metadata.generate-rpm.assets]]
source = "target/release/cava-bg"
dest = "/usr/bin/cava-bg"
mode = "755"

[package.metadata.aur]
depends = ["cava", "wayland"]